<resources>
    <string name="app_name">Logtime</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="SignIn">SignIn</string>
    <string name="Timesheet">Timesheet</string>
    <string name="Home">Home</string>
    <string name="Clients">Clients</string>
    <string name="Projects">Projects</string>
    <string name="Holidays">Holidays</string>
    <string name="action_settings">Settings</string>
    <string name="SignOut">Sign Out</string>
    <string name="Project_id">Project</string>
    <string name="Timesheets">Timesheets</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="user_id">User</string>
    <string name="moldedbits">Moldedbits</string>
    <string name="hello">hello</string>
    <string name="Project">Project</string>
    <string name="Hours">Hours</string>
    <string name="Date">Date</string>
    <string name="Standup_detail">Standup_detail</string>
    <string name="Create_timesheet">Create Timesheet</string>
    <string name="save_and_addmore">Save and Add more?</string>
    <string name="edit">Edit</string>
    <string name="delete"><u>Delete</u></string>
    <string name="new_client">New Client</string>
    <string name="dummy_username">d@moldedbits.com</string>
    <string name="dummy_password">divya</string>
    <string name="fetching_clients">Fetching Clients …</string>
    <string name="Loading">Signing in …</string>
    <string name="fetching_projects">Fetching Projects …</string>
    <string name="name">Name</string>
    <string name="client">Client</string>
    <string name="project_detail">Project Detail</string>
    <string name="active">Active</string>
    <string name="fetching_timesheets">Fetching Timesheets …</string>
    <string name="loading">Loading …</string>
    <string name="date">Date</string>
    <string name="hours">Hours</string>
    <string name="project_id">Project</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_client_details">ClientDetailsActivity</string>
    <string name="create_client">Create a new Client</string>
    <string name="create_timesheet">Create a new timesheet</string>
    <string name="back">Back</string>
    <string name="creatingClient">Creating …</string>
    <string name="clientCreated">Client is successfully created.</string>
    <string name="updating_client">Updating Client</string>
    <string name="update_client">Update Client</string>
</resources>
