<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="60">

    <TextView
        android:id="@+id/project_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        android:layout_weight="10"
        android:text="@string/project_id" />

    <TextView
        android:id="@+id/hours"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        android:layout_weight="10"
        android:text="@string/hours" />

    <TextView
        android:id="@+id/date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        android:layout_weight="10"
        android:text="@string/date" />

    <TextView
        android:id="@+id/standup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        android:layout_weight="20"
        android:text="@string/Standup_detail" />

    <TextView
        android:id="@+id/user"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        android:layout_weight="10"
        android:text="@string/user_id" />

</LinearLayout>
