<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="100">

    <TextView
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        android:layout_weight="20"
        android:text="@string/name" />

    <TextView
        android:id="@+id/client"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        android:layout_weight="20"
        android:text="@string/client" />

    <TextView
        android:id="@+id/project_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        android:layout_weight="40"
        android:text="@string/project_detail" />

    <TextView
        android:id="@+id/is_active"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        android:layout_weight="20"
        android:text="@string/active" />

</LinearLayout>